# hetzner-dyndns

./: .htaccess  Cargo.toml  LICENSE  README.md  dyndns.php
.github/workflows/: format-check.yml
src/: main.rs
